Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21565

Sorting of 'Open Documents' wrong after 'Save as'

    XMLWordPrintable

Details

    Description

      If you have a file open and choose to make a copy of it under a new name using 'Save as', the current open document will be renamed to the new name, and it will keep its position in the 'Open Documents' side bar, even if the new name should be sorted somewhere else.

      I couldn't find any way to make it resort.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-21565
        # Subject Branch Project Status CR V

        Activity

          People

            hunger Tobias Hunger
            allan.jensen Allan Sandfeld Jensen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes