DocumentModel: Keep sorted on renames

Keep the document model sorted on document renames. This effects
the "Open Documents" views and more.

Task-number: QTCREATORBUG-21565
Change-Id: I2c546eb56ebee0a5fa1169060b85fce454b8e571
Reviewed-by: Eike Ziller <eike.ziller@qt.io>